[metadata]
name = chowkidar-graphene
version = 0.6.4
description = All-in-One JWT Authentication plugin for Graphene
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aswinshenoy/chowkidar
author = Ashwin Shenoy
author_email = aswinshenoy65@gmail.com
maintainer = Ashwin Shenoy
maintainer_email = aswinshenoy65@gmail.com
license = GNU-GPL-V3
install_requires =
    Django>=2.0.0
    graphene==2.1.8
    graphene-django==2.8.2
    graphql-core==2.3.1
    PyJWT==2.0.1
    django-ipware==3.0.2
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0

[options]
include_package_data = true
packages = find:
zip_safe = False

[options.data_files]
graphiql.html = chowkidar/templates/graphiql/graphiql.html